@@ -1,3 +1,4 @@
+2094 [MP4 Muxer] use ISO 639-2/T language codes when muxing. Bug #3201829
 2093 [Update] if a component is missing a warning message will appear at startup
 2092 [MainForm] offer to install AviSynth if AviSynth is not found but the installer is availabe (x86 only)
 2091 [Settings] changed default value of "Autostart Queue" to enabled
